fixing the conversion from int to Integer to Byte